# subtle

./: .gitattributes  .gitignore  .tokeignore  README.md  build-macos.sh  build-windows.bat  build-windows.ps1  bump-version.sh  developer-notes.md  eslint.config.js  logmem.sh  mac-repack-test.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  splash.html  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  windows-repack-test.ps1
.github/ISSUE_TEMPLATE/: 问题报告---bug-report.md
src/: App.svelte  EntryEdit.svelte  main.ts  prosemirror.css  styles.css  styles.scss
src-tauri/: .gitattributes  .gitignore  Cargo.toml  msvc-cargo-wrapper.bat  tauri.conf.json  tauri.conf.json''
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_api.rs  diff.rs  encoding.rs  font.rs  history.rs  main.rs  media.rs  media_api.rs  redirect_log.rs  subset.rs  util.rs
src-tauri/src/media/: accel.rs  aggregation_tree.rs  audio.rs  demux.rs  disjoint_interval_set.rs  frame.rs  internal.rs  session.rs  units.rs  video.rs
src/font-data/: mac10_14.csv  mac10_15.csv  win10.csv  win11.csv
src/lib/: API.ts  AudioSampler.ts  Basic.ts  CanvasKeeper.ts  CanvasManager.ts  CombineDialog.svelte  Config.ts  Debug.ts  DialogBase.svelte  DialogOutlet.svelte  EncodingDialog.svelte  EntryEdit.svelte  FilterEdit.svelte  FontSelect.svelte  Fonts.ts  Frontend.ts  Fuzzy.ts  ImportOptionsDialog.svelte  LabelSelect.svelte  LintProfileSelect.svelte  MediaSampler.ts  Playback.ts  PropertiesDialog.svelte  PropertiesToolbox.svelte  PublicConfig.svelte.ts  Resizer.svelte  SearchDialog.svelte  SearchToolbox.svelte  Serialization.ts  SplitLanguagesDialog.svelte  StyleEdit.svelte  StyleSelect.svelte  SubtitleRenderer.ts  SubtitleTable.svelte  Subtitles.svelte.ts  Subtitles.ts  TestToolbox.svelte  Theming.svelte.ts  Theming.ts  TimeTransformDialog.svelte  (+12 more)
src/lib/ai/: CrossLineMerger.test.ts  CrossLineMerger.ts  GlossaryStore.ts  PromptAssembler.ts  ProviderConfig.ts  TranslationPipeline.test.ts  TranslationPipeline.ts  Validator.test.ts  Validator.ts
src/lib/bindings/: .gitattributes  AudioSamplerDeltaData.ts  DecodeResult.ts  DetectResult.ts  DiffEntry.ts  DiffLine.ts  EntryScorer.ts  FontFaceInfo.ts  FontStyle.ts  MatchResult.ts  MatchType.ts  MediaEvent.ts  ResolvedFontFace.ts  ResolvedFontFamily.ts  Seconds.ts  SolutionToken.ts  StreamDescription.ts  StreamKind.ts  SubsetResult.ts  VideoSamplerDeltaData.ts
src/lib/config/: Groups.ts  MemorizedValue.svelte.ts  PrivateConfig.ts  PublicConfig.svelte.ts  SavedStyles.ts
src/lib/core/: ASS.svelte.ts  ASS.ts  ASSString.ts  Filter.ts  Formats.ts  FormattingStateMachine.ts  HTMLString.ts  JSON.svelte.ts  Labels.ts  LintProfile.ts  RichText.ts  SRT.svelte.ts  STL.svelte.ts  Serialization.ts  SimpleFormats.ts  SubtitleUtil.svelte.ts  SubtitleUtil.ts  Subtitles.svelte.ts
src/lib/details/: AggregationTree.ts  BinaryReader.ts  EventHost.ts  Fuzzy.ts  GroupBy.ts  HashMap.ts  Hook.svelte.ts  ISO6937.ts  KeyCodeMap.ts  Mutex.ts  Overridable.svelte.ts  RestartableTask.ts  SlabBuffer.ts  TextLayout.ts  Typography.ts  fuzzy2.ts
src/lib/dialog/: ASSImportDialog.svelte  BugDialog.svelte  CombineDialog.svelte  CompareDialog.svelte  CompareReport.ts  ConfigDialog.svelte  EncodingDialog.svelte  ExportASSDialog.svelte  ExportDialog.svelte  ExportTextDialog.svelte  ImportDialogs.ts  ImportFormatDialog.svelte  ImportFormatDialogs.ts  ImportOptionsDialog.svelte  KeybindingDialog.svelte  KeybindingInputDialog.svelte  LintProfileDialog.svelte  ReferenceSourcesDialog.svelte  SplitByLineDialog.svelte  TimeTransformDialog.svelte  index.ts
src/lib/frontend/: Utils.ts  (+13 more)
src/locales/: en.json  zh-cn.json  zh-tw.json
src/tests/: Dashes.test.ts  ISO6937.test.ts  RichText.test.ts
vite-plugins/: DebugInfoSvelte.ts  DebugInfoTS.ts  debug-info-ts.ts
(+78 files in other folders)
