[package]
name = "subtle"
version = "0.2.6"
description = "Cross-platform subtitle editor"
authors = ["the_dissidents"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
ffmpeg-next = { version = "7.1.0", features = ["build"] }
rand = "0.8.5"
ffmpeg-sys-next = "7.1.0"
serde_json = "1.0.133"
log = "0.4.22"
simple_logger = "5.0.0"

[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.14.0", features = ["flamegraph"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
ffmpeg-sys-next = { git = "https://github.com/the-dissidents/rust-ffmpeg-sys.git", branch = "master" }
