[package]
name = "subtle-subtitles"
version = "0.6.1-a1"
description = "Cross-platform subtitle editor"
authors = ["the_dissidents"]
edition = "2024"

[profile.test]
inherits = "release"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
ffmpeg-next = { version = "7.1.0", features = ["build"] }
rand = "0.8.5"
ffmpeg-sys-next = "7.1.0"
serde_json = "1.0.133"
log = "0.4.22"
tauri-plugin-opener = "2.2.6"
tauri-plugin-log = "2"
lazy_static = "1.5.0"
time = "0.3.41"
deranged = "=0.3.11"
vsprintf = "2.0.0"
num_cpus = "1.17.0"
encoding_rs = "0.8.35"
chardetng = "0.1.17"
tauri-plugin-http = "2"
ordered-float = "5.1.0"
num-traits = "0.2.19"
getset = "0.1.6"
enum_dispatch = "0.3.13"
ts-rs = "11.1.0"

[target.'cfg(windows)'.dependencies]
ffmpeg-sys-next = { version = "7.1.0", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
ffmpeg-sys-next = { version = "7.1.0", features = [] }

[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.14.0", features = ["flamegraph", "frame-pointer"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
ffmpeg-sys-next = { git = "https://github.com/the-dissidents/rust-ffmpeg-sys.git", branch = "official" }
